--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     </div>
                 </a>
                 <ul id="menu" class="right">
-                    <li><a href="" class="active">INICIO</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="index.html" class="active">INICIO</a></li>
+                    <li><a href="src/blog/index.html">BLOG</a></li>
                     <li><a href="">SOBRE MI</a></li>
                     <li><a href="">MIS PRODUCTOS</a></li>
                     <li><a href="">CONTACTO</a></li>
