Se ha finalizado el diseño de la pagina

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="indexHeader">
         <nav class="transparent black-text">
             <div class="container nav-wrapper">
-                <a href="index.html" class="brand-logo"><img src="img/LOGO VERT.png" alt="" width="250" height="150"
+                <a href="index.html" class="brand-logo"><img src="/img/VERT.png" alt="" width="250" height="150"
                         class=" logo"></a>
                 <a href="#" data-target="menu-responsive" class="sidenav-trigger right">
 
@@ -24,10 +24,10 @@
                 </a>
                 <ul id="menu" class="right">
                     <li><a href="index.html" class="active">INICIO</a></li>
-                    <li><a href="src/blog/blog.html">BLOG</a></li>
-                    <li><a href="src/sbout/about.html">SOBRE MI</a></li>
-                    <li><a href="src/products/products.html">MIS PRODUCTOS</a></li>
-                    <li><a href="src/contacto/contacto.html">CONTACTO</a></li>
+                    <li><a href="src/blog/index.html">BLOG</a></li>
+                    <li><a href="src/about/index.html">SOBRE MI</a></li>
+                    <li><a href="src/myproducts/index.html">MIS PRODUCTOS</a></li>
+                    <li><a href="src/contacto/index.html">CONTACTO</a></li>
                 </ul>
             </div>
         </nav>
