--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 </a>
                 <ul id="menu" class="right">
                     <li><a href="index.html" class="active">INICIO</a></li>
-                    <li><a href="src/blog/blog.html">BLOG</a></li>
-                    <li><a href="src/sbout/about.html">SOBRE MI</a></li>
-                    <li><a href="src/products/products.html">MIS PRODUCTOS</a></li>
-                    <li><a href="src/contacto/contacto.html">CONTACTO</a></li>
+                    <li><a href="src/blog/index.html">BLOG</a></li>
+                    <li><a href="src/about/index.html">SOBRE MI</a></li>
+                    <li><a href="src/products/index.html">MIS PRODUCTOS</a></li>
+                    <li><a href="src/contacto/index.html">CONTACTO</a></li>
                 </ul>
             </div>
         </nav>
