Se ha completado la seccion datos

--- a/src/myproducts/index.html
+++ b/src/myproducts/index.html
@@ -106,8 +106,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col m4 offset-m1">
-					<p>Si la vida te da limones, exprímesolos en los ojos.</p>
-					<p>Nuevas ideas</p>
+					<p class="frase">Si la vida te da limones, exprímesolos en los ojos.</p>
+					<p><span>Nuevas ideas</span></p>
 				</div>
 			</div>
 		</div>
