Se ha completado la seccion relleno

--- a/src/myproducts/index.html
+++ b/src/myproducts/index.html
@@ -114,11 +114,13 @@
 	</section>
 	<!--Relleno-->
 	<section class="relleno">
+		<div class="container">
 			<div class="row">
-				<div class="col m7 s10 offset-m4 offset-s3">
-					<p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ad officiis iusto iste porro dolore, sequi ut ea perferendis eveniet repudiandae, ipsam! A, qui corporis nostrum nisi provident, fugit facere? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, omnis itaque quam laboriosam sequi illum corrupti voluptatem dolorum reiciendis? Corrupti, officiis. Ab minima quisquam commodi eos facere modi fuga quidem!</p>   
+				<div class="col s12">
+					<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ad officiis iusto iste porro dolore, sequi ut ea perferendis eveniet repudiandae, ipsam! A, qui corporis nostrum nisi provident, fugit facere? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, omnis itaque quam laboriosam sequi illum corrupti voluptatem dolorum reiciendis? Corrupti, officiis. Ab minima quisquam commodi eos facere modi fuga quidem! Lorem ipsum dolor sit amet consectetur adipisicing, elit. Amet omnis beatae neque nemo tenetur aspernatur porro odit ab. Asperiores nam consectetur dolorem labore odio cupiditate reiciendis sint suscipit unde ipsam?</p>   
 				</div>
 			</div>
+		</div>
 	</section>
 
 	<!--Datos finales-->
