Se ha completado la seccion de agradecimiento (ultimo section)

--- a/src/myproducts/index.html
+++ b/src/myproducts/index.html
@@ -47,18 +47,6 @@
 		  <div class="row">
 				<h1><cite>joker (2019)</cite></h1>
 		  </div>
-		  <footer class="footer-header row">
-				<div class="row">
-					 <div class="redes col l3 offset-l4">
-						  <a href="#"><img src="../../img/icons/ig-white.png" alt="Logo Instagram"></a>
-						  <a href="#"><img src="../../img/index/fb.png" alt="Logo Facebook"></a>
-						  <a href="#"><img src="../../img/index/tw.png" alt="Logo Twitter"></a>
-					 </div>
-				<div class="row name">
-						  <a class="col l3" href="#">@ManuelPérez</a>
-					 </div>
-				</div>
-		  </footer>
 	 </header>
 
 	<!--Luego del Header-->
@@ -124,22 +112,37 @@
 	</section>
 
 	<!--Datos finales-->
-	<section class="footer-container">
-		<div class="row">
-			<hgroup class="center">
-				<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-				<h2> Casi todo esta chevere maria, no cambie demasiado (?</h2>
-			</hgroup>
+	<section class="adicional">
+		<div class="container">
 			<div class="row">
-				<div class="col s6 offset-s5">
-					<p class=" right-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, adipisci odit, ducimus tempore eaque ipsa sit quis laboriosam necessitatibus amet, ut architecto reiciendis iste. Hic, nobis veniam laudantium earum officiis.</p>
-					<p class=" right-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aliquid libero, totam quis velit labore soluta quidem atque placeat dolor odit, exercitationem possimus officia, optio perspiciatis eos, blanditiis corrupti? Ipsum!</p>
-				<div class="thanks right-align"><span>thanks</span></div>
-					<div class="redes">
-						<div class="logos"><span></span></div>
-						<div class="logos"><span></span></div>
-						<div class="logos"><span></span></div>
-						<p class="col offset-m6 offset-m7">@manuelperez</p>
+				<hgroup class="col s7 offset-s3 o center">
+					<h1>Bisupu lorm idept</h1>
+					<h2 class="col s8 offset-s2"> Casi todo esta chevere maria, no cambie demasiado (?</h2>
+				</hgroup>
+				<div class="row">
+					<div class="col s6 offset-s6">
+						<p class="parrafo right-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+						<p class="parrafo right-align">Cumque, adipisci odit, ducimus tempore eaque ipsa sit quis laboriosam necessitatibus amet</p>
+						<p class="parrafo right-align">Ut architecto reiciendis iste. Hic, nobis veniam laudantium earum officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aliquid libero, totam quis velit labore soluta quidem atque placeat dolor odit, exercitationem possimus officia, optio perspiciatis eos, blanditiis corrupti? Ipsum!</p>
+						<p class="parrafo right-align manuel">-Manuel.</p>
+						<div class="thanks col s10 right-align"><span>Thank You!</span></div>
+					</div>
+				</div>
+				<!--Redes sociales main-->
+				<div class="row">
+					<div class="col l5 offset-l7">
+						<div class="social-network row">
+							<div class="col s6 offset-s3">
+							<a href="#"><img class="social-icon" src="../../img/icons/ig2.png" alt="Logo Instagram"></a>
+							<a href="#"><img class="social-icon" src="../../img/icons/facebook2.png" alt="Logo Facebook"></a>
+							<a href="#"><img class="social-icon" src="../../img/icons/twiter2.png" alt="Logo Twitter"></a>
+							</div>
+						</div>
+						<div class="name row">
+							<div class="col offset-s3">
+								<a href="#">@ManuelPérez</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
