Se ha completado la seccion del Header

--- a/src/myproducts/index.html
+++ b/src/myproducts/index.html
@@ -12,7 +12,7 @@
 
 <body>
 	 <!-- HEADER -->
-	 <header class="indexMyProducts header">
+	 <header id="indexMyProducts" class="header">
 		  <nav class="transparent black-text">
 				<div class="container nav-wrapper">
 					 <a href="index.html" class="brand-logo col "><img src="../../img/VERT.png" alt="" width="250" height="150"
@@ -44,9 +44,33 @@
 				<div class="divider"></div>
 		  </ul>
 
-		  <div class="row">
-				<h1><cite>joker (2019)</cite></h1>
-		  </div>
+		  	<div class="container">
+		  		<div class="frase row">
+			  		<div class="col s6 left-align">
+				  		<p>No esperes un cambio si pagas el monto completo</p>
+						<p class="cite"><cite class="white-text">- joker (2019)</cite></p>
+					</div>
+		  		</div>
+		  		<div class="social-networks row">
+			  		<div class="col l12">
+						<div class="social-network row">
+							<div class="col s12">
+							<a href="#"><img class="social-icon" src="../../img/icons/ig-white.png" alt="Logo Instagram"></a>
+							<a href="#"><img class="social-icon" src="../../img/icons/fb-white.png" alt="Logo Facebook"></a>
+							<a href="#"><img class="social-icon" src="../../img/icons/tw-white.png" alt="Logo Twitter"></a>
+							</div>
+						</div>
+						<div class="name row">
+							<div class="col">
+								<a class="white-text" href="#">@ManuelPérez</a>
+							</div>
+						</div>
+					</div>
+			  	</div>
+		  	</div>
+		  <!--Redes sociales main-->
+				
+				</div>
 	 </header>
 
 	<!--Luego del Header-->
@@ -55,7 +79,7 @@
 			<!--Primera parte-->
 			<div class="primary-row row">
 				<div class="col m4 left">
-					<img class="img-position1" src="../../img/MisProductos/IMGWhoAmI.png" alt="El mismo negro pensando que escribira pero arriba">
+					<img class="img-position1" src="" alt="El mismo negro pensando que escribira pero arriba">
 				</div>
 				<div class="content-whoami col m6 offset-m1 right">
 					 <hgroup class="first-hgroup-whoami col s12 center">
@@ -155,7 +179,7 @@
 		  <div class="container">
 				<div class="row">
 					 <div class="col l6 s12">
-						  <img src="img/LOGO HOR.png" alt="" class="logoFoo">
+						  <img src="../../img/LOGO HOR.png" alt="" class="logoFoo">
 					 </div>
 
 					 <div class="col l2 offset-l1 s6">
