Se ha agregado la pagina de contacto al proyecto Se ha sincronizado las demas paginas al proyecto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="indexHeader">
         <nav class="transparent black-text">
             <div class="container nav-wrapper">
-                <a href="index.html" class="brand-logo"><img src="/img/VERT.png" alt="" width="250" height="150"
+                <a href="index.html" class="brand-logo"><img src="img/VERT.png" alt="" width="250" height="150"
                         class=" logo"></a>
                 <a href="#" data-target="menu-responsive" class="sidenav-trigger right">
 
@@ -61,7 +61,7 @@
                         <div class="card-image">
                             <img src="img/index/sample_1.jpg" alt="" class="articleImg">
                         </div>
-                        <img src="img/index/articulo.png" alt="" class="articleIcon">
+                        <img src="img/icons/articulo.png" alt="" class="articleIcon">
 
                         <div class="card-content">
                             <h3 class="card-title orange-text title">Lorem, ipsum dolor.</h3>
@@ -88,7 +88,7 @@
                         <div class="card-image">
                             <img src="img/index/sample_2.jpg" alt="" class="articleImg">
                         </div>
-                        <img src="img/index/podcast.png" alt="" class="articleIcon">
+                        <img src="img/icons/podcast.png" alt="" class="articleIcon">
 
                         <div class="card-content">
                             <h3 class="card-title orange-text title">Lorem, ipsum dolor.</h3>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="center">
-                <a href="#" class="more">Ver Mas Articulos <img src="img/index/arrow.png" class="arrow"></a>
+                <a href="#" class="more">Ver Mas Articulos <img src="img/icons/arrow.png" class="arrow"></a>
             </div>
         </div>
     </div>
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="center">
-                <a href="#" class="more">Ver Mas libros  <img src="img/index/arrow.png" class="arrow"></a>
+                <a href="#" class="more">Ver Mas libros  <img src="img/icons/arrow.png" class="arrow"></a>
             </div>
         </div>
     </div>
@@ -213,9 +213,9 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="img/index/ig.png" alt="" class="contactMediaIco">
-                        <img src="img/index/tw.png" alt="" class="contactMediaIco">
-                        <img src="img/index/fb.png" alt="" class="contactMediaIco">
+                        <img src="img/icons/ig.png" alt="" class="contactMediaIco">
+                        <img src="img/icons/tw.png" alt="" class="contactMediaIco">
+                        <img src="img/icons/fb.png" alt="" class="contactMediaIco">
                     </div>
                     <div class="row">
                         <h3 class="center linkMedia">@manuelperez</h3>
@@ -237,10 +237,10 @@
                     <h5 class="white-text">Links</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="index.html">Inicio</a></li>
-                        <li><a class="grey-text text-lighten-3" href="src/blog/blog.html">Blog</a></li>
-                        <li><a class="grey-text text-lighten-3" href="src/about/about.html">Sobre Mi</a></li>
-                        <li><a class="grey-text text-lighten-3" href="src/products/products.html">Mis Productos</a></li>
-                        <li><a class="grey-text text-lighten-3" href="src/contacto/contacto.html">Contacto</a></li>
+                        <li><a class="grey-text text-lighten-3" href="src/blog/index.html">Blog</a></li>
+                        <li><a class="grey-text text-lighten-3" href="src/about/index.html">Sobre Mi</a></li>
+                        <li><a class="grey-text text-lighten-3" href="src/myproducts/index.html">Mis Productos</a></li>
+                        <li><a class="grey-text text-lighten-3" href="src/contacto/index.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
