--- a/src/contacto/index.html
+++ b/src/contacto/index.html
@@ -14,22 +14,20 @@
     <header class="contactHeader">
         <nav class="transparent black-text">
             <div class="container nav-wrapper">
-                <a href="index.html" class="brand-logo"><img src="../../img/LOGO VERT.png" alt="" width="250" height="150"
+                <a href="index.html" class="brand-logo"><img src="../../img/VERT.png" alt="" width="250" height="150"
                         class=" logo"></a>
                 <a href="#" data-target="menu-responsive" class="sidenav-trigger right">
-
                     <div class="menu-btn">
                         <div class="btn-burger"></div>
                     </div>
                 </a>
                 <ul id="menu" class="right">
-                    <li><a href="../../index.html">INICIO</a></li>
-                    <li><a href="../../src/blog/blog.html">BLOG</a></li>
-                    <li><a href="../../src/about/about.html">SOBRE MI</a></li>
-                    <li><a href="../../src/products/products.html">MIS PRODUCTOS</a></li>
-                    <li><a href="../../src/contacto/contacto.html" class="active">CONTACTO</a></li>
+                    <li><a href="../../index.html" class="active">INICIO</a></li>
+                    <li><a href="../blog/index.html">BLOG</a></li>
+                    <li><a href="../aboutme/index.html">SOBRE MI</a></li>
+                    <li><a href="../myproducts/index.html">MIS PRODUCTOS</a></li>
+                    <li><a href="index.html">CONTACTO</a></li>
                 </ul>
-               
             </div>
         </nav>
         <div class="bannerContactMedia center container">
@@ -37,11 +35,9 @@
                 <h1 class="contactMediaTitle">Contactame</h1>
             </div>
             <div class="row center">
-                <img src="../../img/contact/ig-w.png" alt="" class="contactMediaIco">
-
-                <img src="../../img/contact/tw-w.png" alt="" class="contactMediaIco">
-
-                <img src="../../img/contact/fb-w.png" alt="" class="contactMediaIco">
+                <img src="../../img/icons/ig-white.png" alt="" class="contactMediaIco">
+                <img src="../../img/icons/tw-white.png" alt="" class="contactMediaIco">
+                <img src="../../img/icons/fb-white.png" alt="" class="contactMediaIco">
             </div>
             <div class="row">
                 <h3 class="center contactLinkMedia">@manuelperez</h3>
@@ -111,7 +107,6 @@
         </div>
     </div>
 
-
     <footer class="page-footer">
         <div class="container">
             <div class="row">
@@ -123,10 +118,10 @@
                     <h5 class="white-text">Links</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="../../index.html">Inicio</a></li>
-                        <li><a class="grey-text text-lighten-3" href="../../src/blog/blog.html">Blog</a></li>
-                        <li><a class="grey-text text-lighten-3" href="../../src/about/about.html">Sobre Mi</a></li>
-                        <li><a class="grey-text text-lighten-3" href="../../src/products/products.html">Mis Productos</a></li>
-                        <li><a class="grey-text text-lighten-3" href="../../src/contacto/contacto.html">Contacto</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../blog/index.html">Blog</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../aboutme/index.html">Sobre Mi</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../myproducts/index.html">Mis Productos</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -137,15 +132,12 @@
                     <a href="" class="white-text terminosFont"> Terminos de uso</a><span>|</span>
                     <a href="" class="white-text terminosFont"> Politicas de privacidad</a><span>|</span>
                     <a href="" class="white-text terminosFont"> Terminos de uso </a>
-
                 </div>
                 <div class="center">
-
                     &copy; manuel pérez productions
                     <br>
                     this website was developed by Hivenly Studios
                 </div>
-
             </div>
         </div>
     </footer>
