--- a/src/myproducts/index.html
+++ b/src/myproducts/index.html
@@ -182,11 +182,11 @@
 				<div class="col l2 offset-l1 s6">
 					<h5 class="white-text">Links</h5>
 					<ul>
-						<li><a class="grey-text text-lighten-3" href="index.html">Inicio</a></li>
-						<li><a class="grey-text text-lighten-3" href="src/blog/blog.html">Blog</a></li>
-						<li><a class="grey-text text-lighten-3" href="src/about/about.html">Sobre Mi</a></li>
-						<li><a class="grey-text text-lighten-3" href="src/products/products.html">Mis Productos</a></li>
-						<li><a class="grey-text text-lighten-3" href="src/contacto/contacto.html">Contacto</a></li>
+						 <li><a class="grey-text text-lighten-3" href="../../index.html">Inicio</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../blog/index.html">Blog</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../aboutme/index.html">Sobre Mi</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Mis Productos</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../contacto/index.html">Contacto</a></li>
 					</ul>
 				</div>
 			</div>
