--- a/src/myproducts/index.html
+++ b/src/myproducts/index.html
@@ -11,203 +11,180 @@
 </head>
 
 <body>
-	<!-- HEADER -->
-	<header id="indexMyProducts" class="header">
-		<nav class="transparent black-text">
-				<div class="container nav-wrapper">
-					<a href="index.html" class="brand-logo col "><img src="../../img/VERT.png" alt="" width="250" height="150"
-								class=" logo"></a>
-					<a href="#" data-target="menu-responsive" class="sidenav-trigger right">
-						<div class="menu-btn">
-							<div class="btn-burger"></div>
-						</div>
-					</a>
-					<ul id="menu" class="right">
-						<li><a href="../../index.html" class="active">INICIO</a></li>
-						<li><a href="../blog/index.html">BLOG</a></li>
-						<li><a href="../aboutme/index.html">SOBRE MI</a></li>
-						<li><a href="index.html">MIS PRODUCTOS</a></li>
-						<li><a href="../contacto/index.html">CONTACTO</a></li>
-					</ul>
-				</div>
-		</nav>
-		<ul class="sidenav" id="menu-responsive">
-			<li><a href="index.html" class="active">INICIO</a></li>
-			<div class="divider"></div>
-			<li><a href="src/blog/blog.html">BLOG</a></li>
-			<div class="divider"></div>
-			<li><a href="src/sbout/about.html">SOBRE MI</a></li>
-			<div class="divider"></div>
-			<li><a href="src/products/products.html">MIS PRODUCTOS</a></li>
-			<div class="divider"></div>
-			<li><a href="src/contacto/contacto.html">CONTACTO</a></li>
-			<div class="divider"></div>
+    <header id="myProductsHeader" class="header">
+        <nav class="transparent black-text">
+            <div class="container nav-wrapper">
+                <a href="index.html" class="brand-logo"><img src="../../img/VERT.png" alt="" width="250" height="150"
+                        class=" logo"></a>
+                <a href="#" data-target="menu-responsive" class="sidenav-trigger right">
+                    <div class="menu-btn">
+                        <div class="btn-burger"></div>
+                    </div>
+                </a>
+                <ul id="menu" class="right">
+                    <li><a href="../../index.html" class="active">INICIO</a></li>
+                    <li><a href="../blog/index.html">BLOG</a></li>
+                    <li><a href="../aboutme/index.html">SOBRE MI</a></li>
+                    <li><a href="index.html">MIS PRODUCTOS</a></li>
+                    <li><a href="../contacto/index.html">CONTACTO</a></li>
+                </ul>
+            </div>
+        </nav>
+        <ul class="sidenav" id="menu-responsive">
+            <li><a href="index.html" class="active">INICIO</a></li>
+            <div class="divider"></div>
+            <li><a href="src/blog/blog.html">BLOG</a></li>
+            <div class="divider"></div>
+            <li><a href="src/sbout/about.html">SOBRE MI</a></li>
+            <div class="divider"></div>
+            <li><a href="src/products/products.html">MIS PRODUCTOS</a></li>
+            <div class="divider"></div>
+            <li><a href="src/contacto/contacto.html">CONTACTO</a></li>
+            <div class="divider"></div>
 		</ul>
-
-			<div class="container">
-				<div class="frase row">
-					<div class="col s6 left-align">
-						<p>No esperes un cambio si pagas el monto completo</p>
-						<p class="cite"><cite class="white-text">- joker (2019)</cite></p>
-					</div>
-				</div>
-				<div class="social-networks row">
-					<div class="col l12">
-						<div class="social-network row">
-							<div class="col s12">
-							<a href="#"><img class="social-icon" src="../../img/icons/ig-white.png" alt="Logo Instagram"></a>
-							<a href="#"><img class="social-icon" src="../../img/icons/fb-white.png" alt="Logo Facebook"></a>
-							<a href="#"><img class="social-icon" src="../../img/icons/tw-white.png" alt="Logo Twitter"></a>
-							</div>
-						</div>
-						<div class="name row">
-							<div class="col">
-								<a class="white-text" href="#">@ManuelPérez</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<div class="tittle-header bgText">
+			<h2 class="title col l12 center orange-text">Mis productos</h2>
+			<h3 class="col l12 center white-text">Mis libros, novelas y coleccion de poemas</h3>
+        </div>
 	</header>
 
-	<!--Luego del Header-->
-	<section class="whoami">
-		<div class="container">
-			<!--Primera parte-->
-			<div class="primary-row row">
-				<div class="col m4 left">
-					<img class="img-position1" src="" alt="El mismo negro pensando que escribira pero arriba">
-				</div>
-				<div class="content-whoami col m6 offset-m1 right">
-					<hgroup class="first-hgroup-whoami col s12 center">
-						<h1>¿Quien soy?</h1>
-						<h2>Conoce mas acerca de mi</h2>
-					</hgroup>
-					<div class="content-text center-align col s12">
-						<p class="parrafo col s12">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia enim aliquam quaerat, eligendi ab nisi dolorum sapiente quam esse.</p>
-						<p class="parrafo col s8 offset-s2"><i class="frase">"Nunca dejes para mañana lo que puedes hacer hoy"</i></p>
-						<p class="parrafo col s12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio corrupti ipsa, tenetur rerum illum voluptates reprehenderit quaerat commodi. Atque pariatur ipsum molestias alias nostrum est placeat quisquam. Optio suscipit, deleniti!</p>
+	<div class="container">
+		<h3 class="sectionTitle"><span>|</span>Articulos</h3>
+		<div class="row">
+			<div class="section-books col s6">
+				<img class="image-section responsive-img col s6" src="../../img/icons/book.png" alt="">
+				<div class="content-section col s6">
+					<h2 class="title-section">Lorem Ipsum</h2>
+					<p class="info-section left-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad a sit aperiam, ea illo dolor labore aliquam neque ab, enim suscipit sunt ipsum dolorum cum magnam quisquam libero rem! Enim.</p>
+					<div class="tags">
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
 					</div>
+					<footer class="footer-section">
+						<p class="autor ">By autor Thomas</p>
+						<p class="date">10 Dec 2020</p>
+						<p class="read-more book-read-more">Leer mas</
+					</footer>
 				</div>
 			</div>
-			<!--Segunda parte-->
-			<div class="secundary-row row">
-					<div class="right">
-						<img class="img-position2" src="../../img/MisProductos/IMGWhoAmI.png" alt="Negro pensando en que escribir">
+			<div class="section-books col s6">
+				<img class="image-section responsive-img col s6" src="../../img/icons/book.png" alt="">
+				<div class="content-section col s6">
+					<h2 class="title-section">Lorem Ipsum</h2>
+					<p class="info-section left-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad a sit aperiam, ea illo dolor labore aliquam neque ab, enim suscipit sunt ipsum dolorum cum magnam quisquam libero rem! Enim.</p>
+					<div class="tags">
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
 					</div>
-				<div class="content-whoami col m8 left">
-					<hgroup class="second-hgroup-whoami ">
-						<h1 class="center-align">Lorem Ipsum
-							<br><span class="resaltador">Dolor sit amet</span>
-						</h1>
-					</hgroup>
-					<div class="content-text">
-						<p class="parrafo left-align">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia enim aliquam quaerat, eligendi ab nisi dolorum sapiente quam esse, quae sit eveniet magni doloremque dolor sint eius aspernatur <span class="resaltador">perferendis officiis.</span></p>
-						<p class="parrafo left-align">Lorem ipsum dolor sit amet consectetur adipisicing, elit.</p>
-						<p class="parrafo left-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio corrupti ipsa, tenetur rerum illum voluptates reprehenderit quaerat commodi. Atque pariatur ipsum molestias alias nostrum est placeat quisquam. Optio suscipit, deleniti!</p>
+					<footer class="footer-section">
+						<p class="autor ">By autor Thomas</p>
+						<p class="date">10 Dec 2020</p>
+						<p class="read-more book-read-more">Leer mas</
+					</footer>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="section-books col s6">
+				<img class="image-section responsive-img col s6" src="../../img/icons/book.png" alt="">
+				<div class="content-section col s6">
+					<h2 class="title-section">Lorem Ipsum</h2>
+					<p class="info-section left-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad a sit aperiam, ea illo dolor labore aliquam neque ab, enim suscipit sunt ipsum dolorum cum magnam quisquam libero rem! Enim.</p>
+					<div class="tags">
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
+					</div>
+					<footer class="footer-section">
+						<p class="autor ">By autor Thomas</p>
+						<p class="date">10 Dec 2020</p>
+						<p class="read-more book-read-more">Leer mas</
+					</footer>
+				</div>
+			</div>
+			<div class="section-books col s6">
+				<img class="image-section responsive-img col s6" src="../../img/icons/book.png" alt="">
+				<div class="content-section col s6">
+					<h2 class="title-section">Lorem Ipsum</h2>
+					<p class="info-section left-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad a sit aperiam, ea illo dolor labore aliquam neque ab, enim suscipit sunt ipsum dolorum cum magnam quisquam libero rem! Enim.</p>
+					<div class="tags">
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
+						<span class="tag">tag</span>
+					</div>
+					<footer class="footer-section">
+						<p class="autor ">By autor Thomas</p>
+						<p class="date">10 Dec 2020</p>
+						<p class="read-more book-read-more">Leer mas</
+					</footer>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--Redes sociales main-->
+	<div class="footer-main row">
+		<div class="row">
+			<div class="col l5 offset-l7">
+				<div class="social-network row">
+					<div class="col s6 offset-s3">
+					<a href="#"><img class="social-icon" src="../../img/icons/ig2.png" alt="Logo Instagram"></a>
+					<a href="#"><img class="social-icon" src="../../img/icons/facebook2.png" alt="Logo Facebook"></a>
+					<a href="#"><img class="social-icon" src="../../img/icons/twiter2.png" alt="Logo Twitter"></a>
+					</div>
+				</div>
+				<div class="name row">
+					<div class="col offset-s3">
+						<a href="#" class="orange-text">@ManuelPérez</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
-	<!--datos-->
-	<section class="datos">
-		<div class="container">
-			<div class="row">
-				<div class="col m4 offset-m1">
-					<p class="frase">Si la vida te da limones, exprímesolos en los ojos.</p>
-					<p><span>Nuevas ideas</span></p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--Relleno-->
-	<section class="relleno">
-		<div class="container">
-			<div class="row">
-				<div class="col s12">
-					<p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ad officiis iusto iste porro dolore, sequi ut ea perferendis eveniet repudiandae, ipsam! A, qui corporis nostrum nisi provident, fugit facere? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, omnis itaque quam laboriosam sequi illum corrupti voluptatem dolorum reiciendis? Corrupti, officiis. Ab minima quisquam commodi eos facere modi fuga quidem! Lorem ipsum dolor sit amet consectetur adipisicing, elit. Amet omnis beatae neque nemo tenetur aspernatur porro odit ab. Asperiores nam consectetur dolorem labore odio cupiditate reiciendis sint suscipit unde ipsam?</p>   
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!--Datos finales-->
-	<section class="adicional">
-		<div class="container">
-			<div class="row">
-				<hgroup class="col s7 offset-s3 o center">
-					<h1>Bisupu lorm idept</h1>
-					<h2 class="col s8 offset-s2"> Casi todo esta chevere maria, no cambie demasiado (?</h2>
-				</hgroup>
-				<div class="row">
-					<div class="col s6 offset-s6">
-						<p class="parrafo right-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-						<p class="parrafo right-align">Cumque, adipisci odit, ducimus tempore eaque ipsa sit quis laboriosam necessitatibus amet</p>
-						<p class="parrafo right-align">Ut architecto reiciendis iste. Hic, nobis veniam laudantium earum officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aliquid libero, totam quis velit labore soluta quidem atque placeat dolor odit, exercitationem possimus officia, optio perspiciatis eos, blanditiis corrupti? Ipsum!</p>
-						<p class="parrafo right-align manuel">-Manuel.</p>
-						<div class="thanks col s10 right-align"><span>Thank You!</span></div>
-					</div>
-				</div>
-				<!--Redes sociales main-->
-				<div class="row">
-					<div class="col l5 offset-l7">
-						<div class="social-network row">
-							<div class="col s6 offset-s3">
-							<a href="#"><img class="social-icon" src="../../img/icons/ig2.png" alt="Logo Instagram"></a>
-							<a href="#"><img class="social-icon" src="../../img/icons/facebook2.png" alt="Logo Facebook"></a>
-							<a href="#"><img class="social-icon" src="../../img/icons/twiter2.png" alt="Logo Twitter"></a>
-							</div>
-						</div>
-						<div class="name row">
-							<div class="col offset-s3">
-								<a href="#">@ManuelPérez</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	</div>
 
 
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <img src="../../img/LOGO HOR.png" alt="" class="logoFoo">
+                </div>
 
-	<footer class="page-footer">
-		<div class="container">
-			<div class="row">
-				<div class="col l6 s12">
-					<img src="../../img/LOGO HOR.png" alt="" class="logoFoo">
-				</div>
-				<div class="col l2 offset-l1 s6">
-					<h5 class="white-text">Links</h5>
-					<ul>
-						 <li><a class="grey-text text-lighten-3" href="../../index.html">Inicio</a></li>
-                        <li><a class="grey-text text-lighten-3" href="../blog/index.html">Blog</a></li>
+                <div class="col l2 offset-l1 s6">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="../../index.html">Inicio</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Blog</a></li>
                         <li><a class="grey-text text-lighten-3" href="../aboutme/index.html">Sobre Mi</a></li>
-                        <li><a class="grey-text text-lighten-3" href="index.html">Mis Productos</a></li>
+                        <li><a class="grey-text text-lighten-3" href="../myproducts/index.html">Mis Productos</a></li>
                         <li><a class="grey-text text-lighten-3" href="../contacto/index.html">Contacto</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-				<div class="container">
-					<div class="container center">
-						<a href="" class="white-text terminosFont"> Terminos de uso</a><span>|</span>
-						<a href="" class="white-text terminosFont"> Politicas de privacidad</a><span>|</span>
-						<a href="" class="white-text terminosFont"> Terminos de uso </a>
-					</div>
-					<div class="center">
-						&copy; manuel pérez productions
-						<br>
-						this website was developed by Hivenly Studios
-					</div>
-				</div>
-		</div>
-	</footer>
-	<script src="js/jquery.js"></script>
-	<script src="js/materialize.js"></script>
-	<script src="js/main.js"></script>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                <div class="container center">
+                    <a href="" class="white-text terminosFont"> Terminos de uso</a><span>|</span>
+                    <a href="" class="white-text terminosFont"> Politicas de privacidad</a><span>|</span>
+                    <a href="" class="white-text terminosFont"> Terminos de uso </a>
+                </div>
+                <div class="center">
+
+                    &copy; manuel pérez productions
+                    <br>
+                    this website was developed by Hivenly Studios
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+	<script src="../../js/jquery.js"></script>
+	<script src="../../js/materialize.js"></script>
+	<script src="../../js/main.js"></script>
 </body>
 </html>
