Se ha solucionado un problema de witdh en la pagina de blog

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="entradas section">
 
         <div class="container">
-            <h2 class="sectionTitle">| Articulos</h2>
+            <h2 class="sectionTitle"><span>|</span>Articulos</h2>
             <div class="section row">
                 <div id="" class="col">
                     <div id="card" class="card horizontal cardHeight">
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="container">
-            <h2 class="sectionTitle">| Podcasts</h2>
+            <h2 class="sectionTitle"><span>|</span>Podcasts</h2>
             <div class="section">
                 <div class="col">
                     <div id="card-2" class="card horizontal cardHeight">
@@ -121,7 +121,7 @@
                 <div class="col s4 center cardGrow">
                     <div class="card">
                         <div class="card-image">
-                            <img src="img/index/book.png" alt="" class="portadaBook">
+                            <img src="img/icons/book.png"" class="portadaBook">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title center ">Lorem, ipsum.</h3>
@@ -138,7 +138,7 @@
                 <div class="col s4 center cardGrow">
                     <div class="card">
                         <div class="card-image">
-                            <img src="img/index/book.png" alt="" class="portadaBook">
+                            <img src="img/icons/book.png" alt="" class="portadaBook">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title center">Lorem, ipsum.</h3>
@@ -156,7 +156,7 @@
                 <div class="col s4 center cardGrow">
                     <div class="card">
                         <div class="card-image">
-                            <img src="img/index/book.png" alt="" class="portadaBook">
+                            <img src="img/icons/book.png" alt="" class="portadaBook">
                         </div>
                         <div class="card-content">
                             <h3 class="card-title center">Lorem, ipsum.</h3>
